--- a/debian/control
+++ b/debian/control
@@ -795,6 +795,9 @@ Depends:
  libglx-${nvidia}0 (= ${binary:Version}),
  lib${nvidia}-glvkspirv (= ${binary:Version}),
  ${misc:Depends}
+Recommends:
+ lib${nvidia}-cbl (= ${binary:Version}) [amd64],
+ lib${nvidia}-rtcore (= ${binary:Version}) [amd64],
 Suggests:
  vulkan-utils,
 Enhances:
@@ -837,6 +840,9 @@ Depends:
  libgl1-${nvidia}-glx (= ${binary:Version}),
  lib${nvidia}-glvkspirv (= ${binary:Version}),
  ${misc:Depends}
+Recommends:
+ lib${nvidia}-cbl (= ${binary:Version}) [amd64],
+ lib${nvidia}-rtcore (= ${binary:Version}) [amd64],
 Suggests:
  vulkan-utils,
 Enhances:
@@ -862,10 +868,44 @@ Depends:
 Description: NVIDIA binary Vulkan Spir-V compiler library${nvidia:LegacyDesc}
  Vulkan is a multivendor open standard by the Khronos Group for 3D graphics.
  .
- THis library provides a NVIDIA Vulkan Spir-V compiler which reduces shader
+ This library provides a NVIDIA Vulkan Spir-V compiler which reduces shader
  compilation time and shader system memory consumption.
  .
- This package contains the private Spir-V libraries used by the NVIDIA
+ This package contains the private Spir-V compiler libraries used by the
+ NVIDIA implementation of Vulkan.
+
+#Package: lib${nvidia}-cbl
+Package: libnvidia-cbl
+Architecture: amd64
+Multi-Arch: same
+Pre-Depends:
+ ${misc:Pre-Depends}
+Depends:
+ ${shlibs:Depends}, ${misc:Depends}
+Description: NVIDIA binary Vulkan ray tracing (cbl) library${nvidia:LegacyDesc}
+ Vulkan is a multivendor open standard by the Khronos Group for 3D graphics.
+ .
+ This library is part of the Vulkan real-time ray tracing extensions
+ (VK_NV_raytracing) implementation by NVIDIA.
+ .
+ This package contains the private cbl library used by the NVIDIA
+ implementation of Vulkan.
+
+#Package: lib${nvidia}-rtcore
+Package: libnvidia-rtcore
+Architecture: amd64
+Multi-Arch: same
+Pre-Depends:
+ ${misc:Pre-Depends}
+Depends:
+ ${shlibs:Depends}, ${misc:Depends}
+Description: NVIDIA binary Vulkan ray tracing (rtcore) library${nvidia:LegacyDesc}
+ Vulkan is a multivendor open standard by the Khronos Group for 3D graphics.
+ .
+ This library is part of the Vulkan real-time ray tracing extensions
+ (VK_NV_raytracing) implementation by NVIDIA.
+ .
+ This package contains the private rtcore library used by the NVIDIA
  implementation of Vulkan.
 
 #Package: lib${nvidia}-cfg1
