--- a/debian/rules
+++ b/debian/rules
@@ -240,7 +240,7 @@ override_dh_missing:
 	dh_missing --fail-missing
 
 override_dh_shlibdeps:
-	LD_LIBRARY_PATH=/$(libdir)/$(nvidia_private):$(LD_LIBRARY_PATH) dh_shlibdeps
+	dh_shlibdeps -l/$(libdir)/$(nvidia_private)
 
 override_dh_gencontrol:
 	dh_gencontrol -- -V'nvidia:Version=$(version)' \
