--- a/debian/control
+++ b/debian/control
@@ -859,6 +859,10 @@ Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${shlibs:Depends}, ${misc:Depends}
+Provides:
+ libnvidia-glvkspirv-${nvidia:Version}
+Conflicts:
+ libnvidia-glvkspirv-${nvidia:Version}
 Description: NVIDIA binary Vulkan Spir-V compiler library${nvidia:LegacyDesc}
  Vulkan is a multivendor open standard by the Khronos Group for 3D graphics.
  .
