--- a/debian/control.in
+++ b/debian/control.in
@@ -1,5 +1,4 @@
-#Source: nvidia-graphics-drivers${nvidia:Legacy}
-Source: nvidia-graphics-drivers
+Source: nvidia-graphics-drivers${nvidia:Legacy}
 Section: non-free/libs
 Priority: optional
 Maintainer: Debian NVIDIA Maintainers <pkg-nvidia-devel@lists.alioth.debian.org>
@@ -27,8 +26,7 @@ Standards-Version: 4.2.1
 Homepage: https://www.nvidia.com
 XS-Autobuild: yes
 
-#Package: ${nvidia}-driver
-Package: nvidia-driver
+Package: ${nvidia}-driver
 Section: non-free/x11
 Architecture: i386 amd64 armhf
 Pre-Depends:
@@ -68,8 +66,7 @@ Description: NVIDIA metapackage${nvidia:LegacyDesc}
  .
  Building the kernel module has been tested up to Linux ${nvidia:kmod:tested:Linux}.
 
-#Package: ${nvidia}-driver-bin
-Package: nvidia-driver-bin
+Package: ${nvidia}-driver-bin
 Section: non-free/x11
 Architecture: i386 amd64 armhf
 Depends:
@@ -94,8 +91,7 @@ Description: NVIDIA driver support binaries${nvidia:LegacyDesc}
  .
  This package contains supporting binaries for the driver.
 
-#Package: ${nvidia}-driver-libs
-Package: nvidia-driver-libs
+Package: ${nvidia}-driver-libs
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Depends:
@@ -129,8 +125,7 @@ Description: NVIDIA metapackage (OpenGL/GLX/EGL/GLES libraries)${nvidia:LegacyDe
  that provide optimized hardware acceleration of
  OpenGL/GLX/EGL/GLES applications via a direct-rendering X Server.
 
-#Package: ${nvidia}-driver-libs-i386
-Package: nvidia-driver-libs-i386
+Package: ${nvidia}-driver-libs-i386
 Architecture: i386
 Multi-Arch: foreign
 Depends:
@@ -143,8 +138,7 @@ Description: NVIDIA metapackage (OpenGL/GLX/EGL/GLES 32-bit libraries)${nvidia:L
  OpenGL/GLX/EGL/GLES libraries when installing ${nvidia}-driver-libs
  on amd64 with foreign architecture i386 enabled.
 
-#Package: ${nvidia}-driver-libs-nonglvnd
-Package: nvidia-driver-libs-nonglvnd
+Package: ${nvidia}-driver-libs-nonglvnd
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Depends:
@@ -176,8 +170,7 @@ Description: NVIDIA metapackage (non-GLVND OpenGL/GLX/EGL/GLES libraries)${nvidi
  that provide optimized hardware acceleration of
  OpenGL/GLX/EGL/GLES applications via a direct-rendering X Server.
 
-#Package: ${nvidia}-driver-libs-nonglvnd-i386
-Package: nvidia-driver-libs-nonglvnd-i386
+Package: ${nvidia}-driver-libs-nonglvnd-i386
 Architecture: i386
 Multi-Arch: foreign
 Depends:
@@ -191,8 +184,7 @@ Description: NVIDIA metapackage (non-GLVND OpenGL/EGL/etc. 32-bit libraries)${nv
  ${nvidia}-driver-libs-nonglvnd
  on amd64 with foreign architecture i386 enabled.
 
-#Package: xserver-xorg-video-${nvidia}
-Package: xserver-xorg-video-nvidia
+Package: xserver-xorg-video-${nvidia}
 Section: non-free/x11
 Architecture: i386 amd64 armhf
 Pre-Depends:
@@ -308,8 +300,7 @@ Description: Vendor neutral GL dispatch library -- libGLX
  This package contains the (binary) GLVND libGLX.so.0 stub library provided by
  NVIDIA which dispatches to vendor implementations (libGLX_*.so.0) via GLVND.
 
-#Package: libglx-${nvidia}0
-Package: libglx-nvidia0
+Package: libglx-${nvidia}0
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -353,8 +344,7 @@ Description: Vendor neutral GL dispatch library -- libGL
  This package contains the (binary) GLVND libGL.so.1 stub library provided by
  NVIDIA which dispatches to vendor implementations via GLVND.
 
-#Package: libgl1-${nvidia}-glvnd-glx
-Package: libgl1-nvidia-glvnd-glx
+Package: libgl1-${nvidia}-glvnd-glx
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Depends:
@@ -375,8 +365,7 @@ Description: NVIDIA binary OpenGL/GLX library (GLVND variant)${nvidia:LegacyDesc
  This metapackage depends on the NVIDIA binary OpenGL/GLX implementation using
  GLVND and the corresponding GLVND loader library.
 
-#Package: libgl1-${nvidia}-glx
-Package: libgl1-nvidia-glx
+Package: libgl1-${nvidia}-glx
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -409,8 +398,7 @@ Description: NVIDIA binary OpenGL/GLX library (non-GLVND variant)${nvidia:Legacy
  This package contains the driver specific binary OpenGL/GLX implementation
  provided by NVIDIA as a non-GLVND alternative.
 
-#Package: lib${nvidia}-glcore
-Package: libnvidia-glcore
+Package: lib${nvidia}-glcore
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -455,8 +443,7 @@ Description: Vendor neutral GL dispatch library -- libEGL
  This package contains the (binary) GLVND libEGL.so.1 stub library provided by
  NVIDIA which dispatches to vendor implementations (libEGL_*.so.0) via GLVND.
 
-#Package: libegl1-${nvidia}
-Package: libegl1-nvidia
+Package: libegl1-${nvidia}
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -472,8 +459,7 @@ Description: NVIDIA binary EGL library (non-GLVND variant)${nvidia:LegacyDesc}
  This package contains the driver specific binary EGL implementation by NVIDIA
  as a non-GLVND alternative.
 
-#Package: libegl-${nvidia}0
-Package: libegl-nvidia0
+Package: libegl-${nvidia}0
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -524,8 +510,7 @@ Description: NVIDIA binary OpenGL|ES 1.x GLVND stub library
  provided by NVIDIA which dispatches to vendor implementations
  (libGLESv1_CM_*.so.1) via GLVND.
 
-#Package: libgles1-${nvidia}
-Package: libgles1-nvidia
+Package: libgles1-${nvidia}
 Section: non-free/oldlibs
 Architecture: i386 amd64 armhf
 Multi-Arch: same
@@ -545,8 +530,7 @@ Description: NVIDIA binary OpenGL|ES 1.x library (transitional)${nvidia:LegacyDe
  This is a transitional package to aid switching to the GLVND based
  implementation.
 
-#Package: libgles-${nvidia}1
-Package: libgles-nvidia1
+Package: libgles-${nvidia}1
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -603,8 +587,7 @@ Description: NVIDIA binary OpenGL|ES 2.x GLVND stub library
  provided by NVIDIA which dispatches to vendor implementations
  (libGLESv2_*.so.2) via GLVND.
 
-#Package: libgles2-${nvidia}
-Package: libgles2-nvidia
+Package: libgles2-${nvidia}
 Section: non-free/oldlibs
 Architecture: i386 amd64 armhf
 Multi-Arch: same
@@ -625,8 +608,7 @@ Description: NVIDIA binary OpenGL|ES 2.x library (transitional)${nvidia:LegacyDe
  This is a transitional package to aid switching to the GLVND based
  implementation.
 
-#Package: libgles-${nvidia}2
-Package: libgles-nvidia2
+Package: libgles-${nvidia}2
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -652,8 +634,7 @@ Description: NVIDIA binary OpenGL|ES 2.x library${nvidia:LegacyDesc}
  This package contains the driver specific binary OpenGL|ES 2.x implementation
  by NVIDIA that is accessed via GLVND.
 
-#Package: lib${nvidia}-eglcore
-Package: libnvidia-eglcore
+Package: lib${nvidia}-eglcore
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -691,8 +672,7 @@ Description: NVIDIA binary EGL driver - common files
  This package provides the common files for the NVIDIA installable client
  driver (ICD) for EGL via GLVND.
 
-#Package: ${nvidia}-egl-icd
-Package: nvidia-egl-icd
+Package: ${nvidia}-egl-icd
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Depends:
@@ -712,8 +692,7 @@ Description: NVIDIA EGL installable client driver (ICD)
  This metapackage provides the NVIDIA installable client driver (ICD) for
  EGL via GLVND which supports NVIDIA GPUs.
 
-#Package: lib${nvidia}-egl-wayland1
-Package: libnvidia-egl-wayland1
+Package: lib${nvidia}-egl-wayland1
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -747,8 +726,7 @@ Description: NVIDIA binary Wayland EGL external platform - common files
  This package provides the common files for the NVIDIA implementation
  of Wayland as an EGL external platform.
 
-#Package: ${nvidia}-egl-wayland-icd
-Package: nvidia-egl-wayland-icd
+Package: ${nvidia}-egl-wayland-icd
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Depends:
@@ -786,8 +764,7 @@ Description: NVIDIA Vulkan driver - common files
  This package provides the common files for the NVIDIA installable client
  driver (ICD) for Vulkan (GLVND variant).
 
-#Package: ${nvidia}-vulkan-icd
-Package: nvidia-vulkan-icd
+Package: ${nvidia}-vulkan-icd
 Architecture: i386 amd64
 Multi-Arch: same
 Depends:
@@ -827,8 +804,7 @@ Description: NVIDIA Vulkan driver - common files (non-GLVND variant)
  This package provides the common files for the NVIDIA installable client
  driver (ICD) for Vulkan (non-GLVND variant).
 
-#Package: ${nvidia}-nonglvnd-vulkan-icd
-Package: nvidia-nonglvnd-vulkan-icd
+Package: ${nvidia}-nonglvnd-vulkan-icd
 Architecture: i386 amd64
 Multi-Arch: same
 Depends:
@@ -850,8 +826,7 @@ Description: NVIDIA Vulkan ICD (non-GLVND variant)${nvidia:LegacyDesc}
  This metapackage provides the NVIDIA installable client driver (ICD) for
  Vulkan (non-GLVND variant) which supports NVIDIA GPUs.
 
-#Package: lib${nvidia}-cfg1
-Package: libnvidia-cfg1
+Package: lib${nvidia}-cfg1
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -872,8 +847,7 @@ Description: NVIDIA binary OpenGL/GLX configuration library${nvidia:LegacyDesc}
  .
  This package contains the libnvidia-cfg.so.1 runtime library.
 
-#Package: ${nvidia}-alternative
-Package: nvidia-alternative
+Package: ${nvidia}-alternative
 Architecture: i386 amd64 armhf
 Multi-Arch: foreign
 Pre-Depends:
@@ -907,8 +881,7 @@ Description: allows the selection of NVIDIA as GLX provider${nvidia:LegacyDesc}
  In order to install the NVIDIA driver and libraries, install the
  ${nvidia}-driver package instead.
 
-#Package: ${nvidia}-kernel-support
-Package: nvidia-kernel-support
+Package: ${nvidia}-kernel-support
 Section: non-free/kernel
 Architecture: i386 amd64 armhf
 Multi-Arch: foreign
@@ -932,8 +905,7 @@ Description: NVIDIA binary kernel module support files${nvidia:LegacyDesc}
  .
  This package provides supporting configuration for the kernel module.
 
-#Package: ${nvidia}-kernel-dkms
-Package: nvidia-kernel-dkms
+Package: ${nvidia}-kernel-dkms
 Section: non-free/kernel
 Architecture: i386 amd64 armhf
 Multi-Arch: foreign
@@ -967,8 +939,7 @@ Description: NVIDIA binary kernel module DKMS source${nvidia:LegacyDesc}
  ${nvidia:kmod:blob:archlist}.
  Building the kernel modules has been tested up to Linux ${nvidia:kmod:tested:Linux}.
 
-#Package: ${nvidia}-kernel-source
-Package: nvidia-kernel-source
+Package: ${nvidia}-kernel-source
 Section: non-free/kernel
 Architecture: i386 amd64 armhf
 Depends:
@@ -1006,8 +977,7 @@ Description: NVIDIA binary kernel module source${nvidia:LegacyDesc}
  ${nvidia:kmod:blob:archlist}.
  Building the kernel modules has been tested up to Linux ${nvidia:kmod:tested:Linux}.
 
-#Package: ${nvidia}-vdpau-driver
-Package: nvidia-vdpau-driver
+Package: ${nvidia}-vdpau-driver
 Section: non-free/video
 Architecture: i386 amd64 armhf
 Multi-Arch: same
@@ -1039,8 +1009,7 @@ Description: Video Decode and Presentation API for Unix - NVIDIA driver${nvidia:
  .
  ${nvidia:kmod:Description}
 
-#Package: ${nvidia}-smi
-Package: nvidia-smi
+Package: ${nvidia}-smi
 Section: non-free/utils
 Architecture: i386 amd64 armhf
 Depends:
@@ -1076,8 +1045,7 @@ Description: NVIDIA CUDA Multi Process Service (MPS)
  has compute capability SM 3.5 or higher.
  Pre-CUDA 4.0 APIs are not supported under CUDA MPS.
 
-#Package: ${libcuda1}
-Package: libcuda1
+Package: ${libcuda1}
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -1130,8 +1098,7 @@ Description: NVIDIA CUDA Driver Library${nvidia:LegacyDesc}
  .
  ${nvidia:kmod:Description}
 
-#Package: ${libcuda1}-i386
-Package: libcuda1-i386
+Package: ${libcuda1}-i386
 Architecture: i386
 Multi-Arch: foreign
 Depends:
@@ -1142,8 +1109,7 @@ Description: NVIDIA CUDA 32-bit runtime library${nvidia:LegacyDesc}
  library when installing ${libcuda1} on amd64 with foreign
  architecture i386 enabled.
 
-#Package: lib${nvidia}-compiler
-Package: libnvidia-compiler
+Package: lib${nvidia}-compiler
 Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
@@ -1161,8 +1127,7 @@ Description: NVIDIA runtime compiler library${nvidia:LegacyDesc}
  .
  This package contains the runtime compiler library.
 
-#Package: lib${nvidia}-fatbinaryloader
-Package: libnvidia-fatbinaryloader
+Package: lib${nvidia}-fatbinaryloader
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -1181,8 +1146,7 @@ Description: NVIDIA FAT binary loader${nvidia:LegacyDesc}
  .
  This package contains the FAT multiarchitecture binary loader.
 
-#Package: lib${nvidia}-ptxjitcompiler1
-Package: libnvidia-ptxjitcompiler1
+Package: lib${nvidia}-ptxjitcompiler1
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -1196,8 +1160,7 @@ Description: NVIDIA PTX JIT Compiler${nvidia:LegacyDesc}
  .
  This package contains the runtime PTX JIT compiler library.
 
-#Package: lib${nvidia:if-legacy}nvcuvid1
-Package: libnvcuvid1
+Package: lib${nvidia:if-legacy}nvcuvid1
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -1215,8 +1178,7 @@ Description: NVIDIA CUDA Video Decoder runtime library${nvidia:LegacyDesc}
  .
  This package contains the nvcuvid runtime library.
 
-#Package: lib${nvidia}-encode1
-Package: libnvidia-encode1
+Package: lib${nvidia}-encode1
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -1230,8 +1192,7 @@ Description: NVENC Video Encoding runtime library${nvidia:LegacyDesc}
  .
  This package contains the nvidia-encode runtime library.
 
-#Package: lib${nvidia}-ifr1
-Package: libnvidia-ifr1
+Package: lib${nvidia}-ifr1
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -1247,8 +1208,7 @@ Description: NVIDIA OpenGL-based Inband Frame Readback runtime library${nvidia:L
  .
  This package contains the NvIFROpenGL runtime library.
 
-#Package: lib${nvidia}-fbc1
-Package: libnvidia-fbc1
+Package: lib${nvidia}-fbc1
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -1264,8 +1224,7 @@ Description: NVIDIA OpenGL-based Framebuffer Capture runtime library${nvidia:Leg
  .
  This package contains the NvFBCOpenGL runtime library.
 
-#Package: lib${nvidia}-ml1
-Package: libnvidia-ml1
+Package: lib${nvidia}-ml1
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
@@ -1298,8 +1257,7 @@ Description: NVIDIA OpenCL driver - common files
  This package provides the common files for the NVIDIA installable client
  driver (ICD) for OpenCL.
 
-#Package: ${nvidia}-opencl-icd
-Package: nvidia-opencl-icd
+Package: ${nvidia}-opencl-icd
 Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
