search tarballs in versioned subdir

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -4,6 +4,6 @@ export-dir = ../build-area
 create-orig = False
 pristine-tar = False
 compression = gz
-tarball-dir = ../tarballs-nvidia-graphics-drivers
+tarball-dir = ../tarballs-nvidia-graphics-drivers/%(version)s
 component = [ 'amd64', 'i386', ]
 debian-branch = 304
