add preexport hook to make the tarballs available from the sparse tarball repo clone
git-buildpackage will add support for these features in the next release

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,6 +1,7 @@
 [buildpackage]
 overlay = True
 export-dir = ../build-area
+preexport = make -f debian/rules check-current-tarballs
 create-orig = False
 pristine-tar = False
 compression = gz
