--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Uploaders:
 Vcs-Browser: https://salsa.debian.org/nvidia-team/nvidia-graphics-drivers
 Vcs-Git: https://salsa.debian.org/nvidia-team/nvidia-graphics-drivers.git
 Build-Depends:
- debhelper (>= 11),
+ debhelper-compat (= 11),
  dpkg-dev (>= 1.18.8),
  xz-utils,
  dkms,
