--- a/debian/libnvidia-compiler.lintian-overrides.in
+++ b/debian/libnvidia-compiler.lintian-overrides.in
@@ -17,3 +17,4 @@ hardening-no-stackprotector
 # Therefore we do not include the SONAME in this package name to
 # avoid going through NEW for every new upstream release.
 package-name-doesnt-match-sonames libnvidia-compiler#VERSION#
+symbols-file-missing-build-depends-package-field
