--- a/debian/libgles2-nvidia.lintian-overrides.in
+++ b/debian/libgles2-nvidia.lintian-overrides.in
@@ -8,6 +8,7 @@ hardening-no-stackprotector
 # Packages built against the NVIDIA libGL should declare dependencies on
 # the free version for Debian's purposes.
 symbols-declares-dependency-on-other-package libgles2-mesa
+symbols-file-missing-build-depends-package-field
 
 # Lintian and debhelper disagree w.r.t. a library in a private directory.
 package-has-unnecessary-activation-of-ldconfig-trigger
