--- a/debian/libglvnd0-nvidia.lintian-overrides.in
+++ b/debian/libglvnd0-nvidia.lintian-overrides.in
@@ -11,3 +11,4 @@ package-name-doesnt-match-sonames libGLdispatch0
 # Packages built against the NVIDIA libglvnd should declare dependencies on
 # the free version for Debian's purposes.
 symbols-declares-dependency-on-other-package libglvnd0
+symbols-file-missing-build-depends-package-field
