--- a/debian/libglx0-glvnd-nvidia.lintian-overrides.in
+++ b/debian/libglx0-glvnd-nvidia.lintian-overrides.in
@@ -12,3 +12,4 @@ package-name-doesnt-match-sonames libGLX0
 # Packages built against the NVIDIA libGLX should declare dependencies on
 # the free version for Debian's purposes.
 symbols-declares-dependency-on-other-package libglx0
+symbols-file-missing-build-depends-package-field
