--- a/debian/libegl1-glvnd-nvidia.lintian-overrides.in
+++ b/debian/libegl1-glvnd-nvidia.lintian-overrides.in
@@ -10,6 +10,7 @@ hardening-no-stackprotector
 # the free version for Debian's purposes.
 symbols-declares-dependency-on-other-package libegl1 (*)
 symbols-declares-dependency-on-other-package libegl1-mesa
+symbols-file-missing-build-depends-package-field
 
 # Do not conflict with the virtual package from src:mesa (<< 17).
 conflicts-with-version libegl1 (>> 0)
