--- a/debian/control
+++ b/debian/control
@@ -502,7 +502,7 @@ Description: NVIDIA runtime compiler library${nvidia:LegacyDesc}
  .
  This package contains the runtime compiler library.
 
-#Package: lib${nvidia}-nvcuvid1
+#Package: lib${nvidia:if-legacy}nvcuvid1
 Package: libnvcuvid1
 Architecture: i386 amd64
 Multi-Arch: same
