--- a/debian/rules
+++ b/debian/rules
@@ -24,7 +24,8 @@ version			 = $(NVIDIA_RELEASE)
 version_major		 = $(firstword $(subst ., ,$(version)))
 deb_version_after_jessie = $(DEB_VERSION_AFTER_jessie)
 nvidia			 = nvidia$(legacy)
-libcuda1		 = lib$(if $(legacy),$(nvidia)-)cuda1
+nvidia_if_legacy	 = $(if $(legacy),$(nvidia)-)
+libcuda1		 = lib$(nvidia_if_legacy)cuda1
 module			 = nvidia-$(current)
 current			 = $(if $(legacy),$(patsubst -%,%,$(legacy)),current)
 legacy			 = $(if $(NVIDIA_LEGACY),-legacy-$(NVIDIA_LEGACY)xx)
@@ -50,7 +51,7 @@ CONTROL_PREFIXES	+= libnvcuvid1
 CONTROL_PREFIXES	+= nvidia-smi
 CONTROL_PREFIXES	+= nvidia-opencl-icd
 RENAME_libcuda1		 = $(libcuda1)
-RENAME_libnvcuvid1	 = lib$(if $(legacy),${nvidia}-)nvcuvid1
+RENAME_libnvcuvid1	 = lib$(nvidia_if_legacy)nvcuvid1
 renamed_prefix		 = $(or $(RENAME_$1),$(subst nvidia,$(nvidia),$1))
 CONTROL_PREFIXES_RENAMED = $(foreach p,$(CONTROL_PREFIXES),$(call renamed_prefix,$p))
 
@@ -248,6 +249,7 @@ override_dh_gencontrol:
 		-V'nvidia:xorgDepends=$(xorg_depends)' \
 		-V'nvidia:xorgProvides=$(xorg_provides)' \
 		-V'nvidia=$(nvidia)' \
+		-V'nvidia:if-legacy=$(nvidia_if_legacy)' \
 		-V'libcuda1=$(libcuda1)' \
 		-V'nvidia:Legacy=$(legacy)' \
 		-V'nvidia:LegacyDesc=$(legacy_description)' \
