--- a/debian/libnvidia-cbl.lintian-overrides.in
+++ b/debian/libnvidia-cbl.lintian-overrides.in
@@ -12,3 +12,4 @@ hardening-no-relro
 # Therefore we do not include the SONAME in this package name to
 # avoid going through NEW for every new upstream release.
 package-name-doesnt-match-sonames libnvidia-cbl#VERSION#
+symbols-file-missing-build-depends-package-field
