--- a/debian/libnvidia-rtcore.lintian-overrides.in
+++ b/debian/libnvidia-rtcore.lintian-overrides.in
@@ -11,3 +11,4 @@ hardening-no-fortify-functions
 # Therefore we do not include the SONAME in this package name to
 # avoid going through NEW for every new upstream release.
 package-name-doesnt-match-sonames libnvidia-rtcore#VERSION#
+symbols-file-missing-build-depends-package-field
