--- a/debian/rules
+++ b/debian/rules
@@ -349,21 +349,30 @@ include debian/bug-control.mk
 ############################################################################
 
 # only invoked manually
-debian/control: debian/gen-control.pl debian/control.in
+debian/control: debian/control.in debian/gen-control.pl debian/rules debian/rules.defs
 	debian/gen-control.pl \
 		-V'nvidia=$(nvidia)' \
 		-V'nvidia:if-legacy=$(nvidia_if_legacy)' \
 		-V'nvidia:Legacy=$(legacy)' \
 		-V'libcuda1=$(libcuda1)' \
 		-- \
-		debian/control.in > debian/control
-	@echo
-	@echo This target is made to fail intentionally, to make sure
-	@echo that it is NEVER run during the automated build. Please
-	@echo ignore the following error, the debian/control file has
-	@echo been generated SUCCESSFULLY.
-	@echo
-	exit 1
+		debian/control.in > debian/control.new
+	@if ! cmp -s debian/control.new debian/control ; then \
+		echo ; \
+		echo This target is made to fail intentionally, to make sure ; \
+		echo that it is NEVER run during the automated build. Please ; \
+		echo ignore the following error, the debian/control file has ; \
+		echo been generated SUCCESSFULLY. ; \
+		echo ; \
+	fi
+	@set -e -x ; \
+	if ! cmp -s debian/control.new debian/control ; then \
+		mv debian/control.new debian/control ; \
+		exit 1 ; \
+	else \
+		$(RM) debian/control.new ; \
+		touch $@ ; \
+	fi
 
 # only invoked manually
 %.txt: %.list
