--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,7 @@ Build-Depends:
  dpkg-dev (>= 1.18.8),
  xz-utils,
  dkms,
- libvulkan1 (>= 1.0.42),
+ libvulkan1,
  libxext6 [!ppc64el],
  quilt,
  po-debconf,
@@ -108,13 +108,6 @@ Recommends:
  ${nvidia}-vulkan-icd (= ${binary:Version}) [amd64 i386],
 Conflicts:
  libgldispatch0-nvidia,
- libglvnd0-nvidia,
- libopengl0-glvnd-nvidia,
- libglx0-glvnd-nvidia,
- libgl1-glvnd-nvidia-glx,
- libegl1-glvnd-nvidia,
- libgles1-glvnd-nvidia,
- libgles2-glvnd-nvidia,
 Breaks:
  ${nvidia}-driver-libs-nonglvnd,
  libgl1-${nvidia}-glx,
@@ -154,13 +147,8 @@ Recommends:
  ${nvidia}-nonglvnd-vulkan-icd (= ${binary:Version}) [amd64 i386],
 Conflicts:
  libgldispatch0-nvidia,
- libglvnd0-nvidia,
- libopengl0-glvnd-nvidia,
- libglx0-glvnd-nvidia,
  libgl1-glvnd-nvidia-glx,
  libegl1-glvnd-nvidia,
- libgles1-glvnd-nvidia,
- libgles2-glvnd-nvidia,
 Breaks:
  ${nvidia}-driver-libs,
  libgl1-${nvidia}-glvnd-glx,
@@ -718,7 +706,7 @@ Architecture: i386 amd64
 Multi-Arch: same
 Depends:
  nvidia-vulkan-common,
- libvulkan1 (>= 1.0.42),
+ libvulkan1,
  libglx-${nvidia}0 (= ${binary:Version}),
  ${misc:Depends}
 Suggests:
@@ -758,7 +746,7 @@ Architecture: i386 amd64
 Multi-Arch: same
 Depends:
  nvidia-nonglvnd-vulkan-common,
- libvulkan1 (>= 1.0.42),
+ libvulkan1,
  libgl1-${nvidia}-glx (= ${binary:Version}),
  ${misc:Depends}
 Suggests:
