--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -7,4 +7,4 @@ pristine-tar = False
 compression = gz
 tarball-dir = ../tarballs-nvidia-graphics-drivers/%(version)s
 component = [ 'amd64', 'i386', 'armhf', ]
-debian-branch = 390
+debian-branch = 390-buster
