re-apply changes that were unsuitable for stretch

--- a/debian/control.in
+++ b/debian/control.in
@@ -13,7 +13,7 @@ Build-Depends:
  dpkg-dev (>= 1.18.8),
  xz-utils,
  dkms,
- libvulkan1,
+ libvulkan1 (>= 1.0.42),
  libxext6 [!ppc64el],
  quilt,
  po-debconf,
@@ -106,13 +106,13 @@ Recommends:
  ${nvidia}-vulkan-icd (= ${binary:Version}) [amd64 i386],
 Conflicts:
  libgldispatch0-nvidia,
-# libglvnd0-nvidia,
-# libopengl0-glvnd-nvidia,
-# libglx0-glvnd-nvidia,
-# libgl1-glvnd-nvidia-glx,
-# libegl1-glvnd-nvidia,
-# libgles1-glvnd-nvidia,
-# libgles2-glvnd-nvidia,
+ libglvnd0-nvidia,
+ libopengl0-glvnd-nvidia,
+ libglx0-glvnd-nvidia,
+ libgl1-glvnd-nvidia-glx,
+ libegl1-glvnd-nvidia,
+ libgles1-glvnd-nvidia,
+ libgles2-glvnd-nvidia,
 Breaks:
  ${nvidia}-driver-libs-nonglvnd,
  libgl1-${nvidia}-glx,
@@ -152,13 +152,13 @@ Recommends:
  ${nvidia}-nonglvnd-vulkan-icd (= ${binary:Version}) [amd64 i386],
 Conflicts:
  libgldispatch0-nvidia,
-# libglvnd0-nvidia,
-# libopengl0-glvnd-nvidia,
-# libglx0-glvnd-nvidia,
+ libglvnd0-nvidia,
+ libopengl0-glvnd-nvidia,
+ libglx0-glvnd-nvidia,
  libgl1-glvnd-nvidia-glx,
  libegl1-glvnd-nvidia,
-# libgles1-glvnd-nvidia,
-# libgles2-glvnd-nvidia,
+ libgles1-glvnd-nvidia,
+ libgles2-glvnd-nvidia,
 Breaks:
  ${nvidia}-driver-libs,
  libgl1-${nvidia}-glvnd-glx,
@@ -716,7 +716,7 @@ Architecture: i386 amd64
 Multi-Arch: same
 Depends:
  nvidia-vulkan-common,
- libvulkan1,
+ libvulkan1 (>= 1.0.42),
  libglx-${nvidia}0 (= ${binary:Version}),
  ${misc:Depends}
 Suggests:
@@ -756,7 +756,7 @@ Architecture: i386 amd64
 Multi-Arch: same
 Depends:
  nvidia-nonglvnd-vulkan-common,
- libvulkan1,
+ libvulkan1 (>= 1.0.42),
  libgl1-${nvidia}-glx (= ${binary:Version}),
  ${misc:Depends}
 Suggests:
