switch to debhelper-compat (= 12)

--- a/debian/module/debian/control.template.in
+++ b/debian/module/debian/control.template.in
@@ -2,7 +2,9 @@ Source: #NVIDIA#-kernel
 Section: non-free/kernel
 Priority: optional
 Maintainer: Debian NVIDIA Maintainers <pkg-nvidia-devel@lists.alioth.debian.org>
-Build-Depends: debhelper-compat (= 11), quilt
+Build-Depends:
+ debhelper-compat (= 12),
+ quilt,
 Standards-Version: 4.3.0
 Homepage: https://www.nvidia.com/
 
