help nvidia-persistenced choose the right libnvidia-cfg1-any provider
by letting ${libcuda1} recommend lib${nvidia}-cfg1 before nvidia-persistenced

--- a/debian/control
+++ b/debian/control
@@ -996,6 +996,7 @@ Depends:
 Recommends:
  ${nvidia:kmod:binary},
  ${nvidia}-smi,
+ lib${nvidia}-cfg1 (= ${binary:Version}),
  nvidia-persistenced,
  ${libcuda1}-i386 [amd64],
 Suggests:
