help ${nvidia:kmod:binary} choose ${nvidia}-driver-libs-nonglvnd in the non-GLVND case
by having libgl1-${nvidia}-glx recommend it before ${nvidia:kmod:binary}

--- a/debian/control
+++ b/debian/control
@@ -367,6 +367,7 @@ Depends:
  nvidia-support,
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
+ ${nvidia}-driver-libs-nonglvnd (= ${binary:Version}),
  ${nvidia:kmod:binary},
 Suggests:
  ${nvidia:kmod:source},
