--- a/debian/control.in
+++ b/debian/control.in
@@ -377,6 +377,8 @@ Depends:
  nvidia-support,
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
+# help ${nvidia:kmod:binary} to select the correct recommended alternative
+ ${nvidia}-driver-libs-nonglvnd (= ${binary:Version}),
  ${nvidia:kmod:binary},
 Suggests:
  ${nvidia:kmod:source},
