lower Recommends to Suggests in the *-common packages
since they are used by both current and legacy drivers

--- a/debian/control
+++ b/debian/control
@@ -654,7 +654,7 @@ Architecture: i386 amd64 armhf
 Multi-Arch: foreign
 Depends:
  ${misc:Depends}
-Recommends:
+Suggests:
  libegl-${nvidia}0
  | libegl-nvidia-legacy-390xx0,
 Description: NVIDIA binary EGL driver - common files
@@ -689,7 +689,7 @@ Architecture: i386 amd64
 Multi-Arch: foreign
 Depends:
  ${misc:Depends}
-Recommends:
+Suggests:
  ${nvidia}-vulkan-icd
  | nvidia-legacy-390xx-vulkan-icd,
 Conflicts:
@@ -729,7 +729,7 @@ Architecture: i386 amd64
 Multi-Arch: foreign
 Depends:
  ${misc:Depends}
-Recommends:
+Suggests:
  ${nvidia}-nonglvnd-vulkan-icd
  | nvidia-legacy-390xx-nonglvnd-vulkan-icd,
 Conflicts:
@@ -1185,7 +1185,7 @@ Architecture: i386 amd64
 Multi-Arch: foreign
 Depends:
  ${misc:Depends}
-Recommends:
+Suggests:
  ${nvidia}-opencl-icd
  | nvidia-legacy-390xx-opencl-icd,
 Description: NVIDIA OpenCL driver - common files
