--- a/debian/control.in
+++ b/debian/control.in
@@ -191,7 +191,7 @@ Pre-Depends:
 Depends:
  lib${nvidia}-glcore (= ${binary:Version}),
  ${nvidia}-alternative (= ${binary:Version}),
- nvidia-support (>= 20120630),
+ nvidia-support,
  ${nvidia:xorgDepends},
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
@@ -224,7 +224,7 @@ Package: nvidia-legacy-check
 Architecture: i386 amd64 armhf
 Multi-Arch: foreign
 Pre-Depends:
- debconf (>= 0.5) | debconf-2.0,
+ debconf | debconf-2.0,
  pciutils,
  nvidia-installer-cleanup (>= 20151021),
 Depends:
