add new package for the NVIDIA Optical Flow runtime library

--- a/debian/control
+++ b/debian/control
@@ -1048,6 +1048,20 @@ Description: NVIDIA implementation of the OptiX ray tracing engine${nvidia:Legac
  implementation for NVIDIA CUDA.
  It is used by liboptix.so.* coming with applications using the OptiX API.
 
+Package: libnvidia-opticalflow1
+Architecture: i386 amd64
+Multi-Arch: same
+Pre-Depends:
+ ${misc:Pre-Depends}
+Depends:
+ ${shlibs:Depends}, ${misc:Depends}
+Homepage: https://developer.nvidia.com/opticalflow-sdk
+Description: NVIDIA Optical Flow runtime library${nvidia:LegacyDesc}
+ The NVIDIA Optical Flow SDK exposes the latest hardware capability of Turing
+ GPUs dedicated to computing the relative motion of pixels between images.
+ .
+ This package contains the Optical Flow runtime library.
+
 Package: libnvidia-ml1
 Architecture: i386 amd64
 Multi-Arch: same
