--- a/debian/control
+++ b/debian/control
@@ -43,6 +43,7 @@ Depends:
  ${misc:Depends}
 Recommends:
  ${nvidia-settings},
+ lib${nvidia}-cfg1 (= ${binary:Version}),
  nvidia-persistenced,
 Suggests:
  ${nvidia:kmod:source},
