--- a/debian/control
+++ b/debian/control
@@ -891,7 +891,7 @@ Package: nvidia-kernel-source
 Section: non-free/kernel
 Architecture: i386 amd64 armhf
 Depends:
- debhelper-compat (= 12),
+ debhelper-compat (= ${nvidia:debhelper-compat}),
  make:any,
  quilt,
  xz-utils,
